# build-your-own-search-engine-workshop

./: .gitigonore  README.md  main.py  pyproject.toml  search-engine.ipynb
module-1/: homework.ipynb  lectures.ipynb
module-2/: homework.ipynb  lectures.ipynb  qdrant-local-server.sh
module-2/qdrant_storage/: raft_state.json
module-2/qdrant_storage/collections/homework_q6/0/: newest_clocks.json  replica_state.json
module-2/qdrant_storage/collections/homework_q6/0/segments/0d5de3b1-5682-4b6e-9fa0-0a3943322ad6/payload_index/: IDENTITY  LOG  (+1 more)
module-2/qdrant_storage/collections/homework_q6/0/segments/6647ebf9-af26-4da8-9a4b-d9d51750e596/: mutable_id_tracker.mappings
module-2/qdrant_storage/collections/zoomcamp-faq/0/: newest_clocks.json
module-2/qdrant_storage/collections/zoomcamp-faq/0/segments/ed75285f-267b-4d03-a10d-da2e922a67ea/: mutable_id_tracker.mappings
module-2/qdrant_storage/collections/zoomcamp-sparse-and-dense/0/: newest_clocks.json
module-2/qdrant_storage/collections/zoomcamp-sparse-and-dense/0/segments/560a76ac-485e-49bc-a7c8-9bc55a3e2817/: mutable_id_tracker.mappings
module-2/qdrant_storage/collections/zoomcamp-sparse-and-dense/0/segments/62939a37-eebb-44f1-8879-db9f876654ec/: mutable_id_tracker.mappings
module-2/qdrant_storage/collections/zoomcamp-sparse/0/: newest_clocks.json
module-2/qdrant_storage/collections/zoomcamp-sparse/0/segments/72121d15-3901-450f-827f-2499855b166b/: mutable_id_tracker.mappings
module-2/qdrant_storage/collections/zoomcamp-sparse/0/segments/cf6545e9-ca0a-41ac-bc13-820282432e57/: mutable_id_tracker.mappings
(+143 files in other folders)
