[project]
name = "build-your-own-search-engine-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
